<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_lesson"
        android:icon="@drawable/ic_baseline_library_books_24"
        android:title="@string/vn_lesson" />
    <item
        android:id="@+id/nav_word"
        android:icon="@drawable/ic_vocab_2_24"
        android:title="@string/vn_words" />
    <item
        android:id="@+id/nav_practice"
        android:icon="@drawable/ic_baseline_practice_24"
        android:title="@string/vn_practice" />
    <item
        android:id="@+id/nav_music"
        android:icon="@drawable/ic_song_24"
        android:title="@string/vn_music" />
    <item
        android:id="@+id/nav_admin_more"
        android:icon="@drawable/ic_baseline_more_24"
        android:title="@string/en_more" />
</menu>