<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9">

    <ImageView
        android:id="@+id/ivChangeLanguage"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flag_of_china" />

    <TextView
        android:id="@+id/tvLanguageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Home Fragment"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivChangeLanguage" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="Học từ vựng"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLanguageTitle" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="Học mở rộng"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btAudio" />

    <Button
        android:id="@+id/btAudio"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_learn"
        android:text="@string/vn_audio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/btSong"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_learn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/btRating"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_learn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btSong" />

    <Button
        android:id="@+id/btDictionary"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:background="@drawable/button_learn"
        app:layout_constraintEnd_toStartOf="@+id/btRating"
        app:layout_constraintStart_toEndOf="@+id/btSong"
        app:layout_constraintTop_toTopOf="@+id/btSong" />

    <Button
        android:id="@+id/btTest"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:background="@drawable/button_learn"
        android:text="@string/vn_test"
        app:layout_constraintEnd_toStartOf="@+id/btPractice"
        app:layout_constraintStart_toEndOf="@+id/btAudio"
        app:layout_constraintTop_toTopOf="@+id/btAudio" />

    <Button
        android:id="@+id/btPractice"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_learn"
        android:text="@string/vn_practice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btAudio" />


</androidx.constraintlayout.widget.ConstraintLayout>